src/components/TodoItem/TodoItem.css
.todoitem{
    border: 1px solid #8D99AE;
    border-radius: 10px;
    padding: calc(var(--basic-padding) + 5px);
    background-color: #EDF2F4;
   
}
.todocontainer{
    display: flex;
    align-items: center;
    gap: 5px;
    justify-content: center;
    flex-wrap: wrap;
}
.todoitem:hover{
    background-color: #d8e2dc;
}

.todoitem button{
    border: none;
    font-size: 1.3em;
    background-color: inherit;
}
.todoitem button:hover{
    cursor: pointer;
}
.deleteBtn:hover{
    color: #e63946;
}
@media (width>=1024px){
    .textcontainer{
        width: 85%;
    }
}
@media (width>=1440px){
    .textcontainer{
        width: 88%;
    }
}

